# course_work_02

./: .env  .env_template  .gitignore  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_abstract_api_py.html  z_145eef247bfb46b6_abstract_storage_py.html  z_145eef247bfb46b6_aeroplane_py.html  z_145eef247bfb46b6_aeroplanes_api_py.html  z_145eef247bfb46b6_json_storage_py.html  z_145eef247bfb46b6_user_interface_py.html
src/: abstract_api.py  abstract_storage.py  aeroplane.py  aeroplanes_api.py  json_storage.py  user_interface.py
tests/: test_aeroplane.py  test_aeroplanes.py  test_aeroplanes_api.py  test_json_storage.py  test_user_interface.py
