[project]
name = "coursework-02"
version = "0.1.0"
description = ""
authors = [
    {name = "natalakozlova",email = "natamedoed22@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | \.idea
  | __pycache__
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
